<resources>
    <string name="app_name">Security</string>
    <string name="liveFeed">Live Feed</string>
    <string name="sensorStatus">Sensor Status</string>
    <string name="remoteControl">Remote Control</string>
    <string name="eventLog">Event Log</string>
    <string name="settings">Settings</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="status">Status</string>
    <string name="devicename">Device Name:</string>
    <string name="defaultHolder">Default</string>
    <string name="editButton">Edit Button</string>
    <string name="liveFeedIP">Live Feed Ip:</string>
    <string name="alarmPushCode">Alarm Push Code:</string>
    <string name="warningPushCode">Warning Push Code:</string>
    <string name="cameraActivationCode">Camera Activation Code:</string>
    <string name="systemCheckCode">System Check Code:</string>
    <string name="tripSensorMin">Trip Sensor Min Range:</string>
    <string name="tripSensorMax">Trip Sensor Max Range:</string>
    <string name="buzzerActivation">Buzzer Activation Code:</string>
    <string name="ledCheck">Led Check Code:</string>
    <string name="resetDefaults">Reset Defaults</string>
    <string name="info">Info</string>
    <string name="checkUpdates">Check For Updates</string>
    <string name="accept">Accept</string>
    <string name="tripSensor">Trip Sensor:</string>
    <string name="motionSensor">Motion Sensor:</string>
    <string name="buzzer">Buzzer:</string>
    <string name="camera">Camera:</string>
    <string name="led">Led:</string>
    <string name="espCam">ESP Cam:</string>
    <string name="goLive">Go Live</string>
    <string name="armed">ARMED</string>
    <string name="disarmed">DISARMED</string>
    <string name="active">ACTIVE</string>
    <string name="inactive">INACTIVE</string>
    <string name="standby">STBY</string>
    <string name="detected">DETECTED</string>
    <string name="deleteButton">Delete Button</string>
    <string name="acceptButton">Accept Button</string>
    <string name="pairedDevices">Paired Devices</string>
    <string name="availableDevices">Available Devices</string>
    <string name="scan">Scan</string>
    <string name="refreshButton">Refresh Button</string>
    <string name="events">Events</string>
    <string name="deleteAll">Delete All</string>
    <string name="goToSensors">Go To Sensors</string>
    <string name="menu">Options</string>
    <string name="send">Send</string>
    <string name="phoneNumber">Number:</string>
    <string name="command">Command:</string>
</resources>
