<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BluetoothActivity"
    android:background="#edffff"
    >


    <TextView
        android:id="@+id/tvBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:text="@string/bluetooth"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"
        android:background="#000"
        app:layout_constraintTop_toBottomOf="@id/tvBluetooth" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/status"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:thumb="@drawable/btstatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toEndOf="@+id/tvStatus"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:track="@drawable/btstatustrack" />

    <TextView
        android:id="@+id/tvDeviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/devicename"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatus" />

    <TextView
        android:id="@+id/tvDeviceNameDefiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="#232626"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toEndOf="@+id/tvDeviceName"
        app:layout_constraintTop_toBottomOf="@+id/switchBluetooth" />

    <ImageView
        android:id="@+id/ivEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:contentDescription="@string/editButton"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toEndOf="@+id/tvDeviceNameDefiner"
        app:layout_constraintTop_toBottomOf="@+id/switchBluetooth"
        app:srcCompat="@drawable/ic_action_edit"
        tools:ignore="VectorDrawableCompat" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="#a6a6a6"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/tvDeviceNameDefiner"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/etDeviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/defaultHolder"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        android:labelFor="@id/etDeviceName"
        app:layout_constraintTop_toBottomOf="@+id/tvDeviceName" />

    <ImageView
        android:id="@+id/ivEditAcceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:clickable="true"
        android:contentDescription="@string/acceptButton"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/etDeviceName"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:srcCompat="@drawable/ic_action_edit_accept"
        tools:ignore="VectorDrawableCompat" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="#a6a6a6"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/etDeviceName"
        tools:layout_editor_absoluteX="0dp"
        />

    <ListView
        android:id="@+id/lvPairedDevices"
        android:layout_width="353dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPairedHeader"
        android:visibility="invisible"/>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="#a6a6a6"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/lvPairedDevices"
        tools:layout_editor_absoluteX="0dp"
        />

    <TextView
        android:id="@+id/tvPairedHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/pairedDevices"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tvAvailableDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/availableDevices"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        android:visibility="invisible"/>

    <ListView
        android:id="@+id/lvAvailableDevices"
        android:layout_width="353dp"
        android:layout_height="125dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAvailableDevices"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btnDiscover"
        android:layout_width="97dp"
        android:layout_height="53dp"
        android:background="@drawable/ic_action_discover"
        android:gravity="center|bottom"
        android:text="@string/scan"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"

        />

    <ImageView
        android:id="@+id/ivRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/tvPairedHeader"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:srcCompat="@drawable/ic_action_refresh"
        android:visibility="invisible"
        android:clickable="true"
        android:contentDescription="@string/refreshButton"
        android:focusable="true"
        tools:ignore="VectorDrawableCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>